Variant: use options in top SBT JVM