@@ -53,7 +53,6 @@ object ProjectPlugin extends AutoPlugin {
 
   override def projectSettings =
     Seq(
-      javaOptions ++= Seq( "-XX:MaxMetaspaceSize=1g","-XX:+ScavengeBeforeFullGC", "-XX:+UseConcMarkSweepGC", "-XX:+CMSParallelRemarkEnabled"),
       coverageMinimum := 80,
       coverageFailOnMinimum := false,
       description := "A Cohesive & Pragmatic Framework of FP centric Scala libraries",
